[level 2] Title: 전화번호 목록, Time: 323.12 ms, Memory: 238 MB -BaekjoonHub