@@ -1,17 +1,20 @@
 import java.util.*;
-import java.io.*;
 class Solution {
     public boolean solution(String[] phone_book) {
-        HashSet<String> set = new HashSet();
-        List<String> strList = new ArrayList<>(Arrays.asList(phone_book));
-        Collections.sort(strList, (a,b)->a.length() - b.length());
-        for(int i = 0; i<strList.size(); i++){
-            String source = strList.get(i);
-            for(int j = 1; j<= source.length(); j++){
-                if(set.contains(source.substring(0, j))) return false;
+        HashSet<String> set = new HashSet<>();
+        List<String> list = new ArrayList<>(List.of(phone_book));
+        
+        Collections.sort(list, (a, b)->a.length() - b.length());
+        for(int i = 0 ; i< list.size(); i++){
+            String phone = list.get(i);
+            for(int j = 1; j<= phone.length(); j++){
+                if(set.contains(phone.substring(0, j))){
+                    return false;
+                }
             }
-            set.add(source);
+            set.add(phone);
         }
         return true;
+
     }
 }
